examples/test/testpolicy12321.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12321
  namespace: namespace397
spec:
  podSelector:
    matchLabels:
      key34: value39
      key37: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value27
          key40: value7
          key30: value40
      podSelector:
        matchLabels:
          key11: value22
          key16: value36
